--- a/Presentation/WebAPI/appsettings.json
+++ b/Presentation/WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDb": "mongodb+srv://hrms:s7H1ypYVDe4HH1st@humanresource.vz0pqfl.mongodb.net/humanresource?retryWrites=true&w=majority"
+    "MongoDb": ""
   }
 }
