--- a/Presentation/WebAPI/appsettings.json
+++ b/Presentation/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "altan@altan.com",
+    "Issuer": "altan@altan.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretmysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
