AOP, Validation, Validaton Aspect added.

--- a/Presentation/WebAPI/appsettings.json
+++ b/Presentation/WebAPI/appsettings.json
@@ -13,6 +13,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDb": ""
+    "MongoDb": "mongodb+srv://hrms:s7H1ypYVDe4HH1st@humanresource.vz0pqfl.mongodb.net/?retryWrites=true&w=majority"
   }
 }
