CQRS and Mediator Design pattern added. API controllers, Database operations and Service interfaces rewrited with using asynchronous programming. Changes were made to the properties of some entities. Unnecessary Dto objects deleted. Some validators added. Some constans messages added.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+/Presentation/WebAPI/appsettings.Production.json
+/Presentation/WebAPI/appsettings.json
